doc: Update brand domain

--- a/custom_components/hitachi_yutaki/manifest.json
+++ b/custom_components/hitachi_yutaki/manifest.json
@@ -1,5 +1,5 @@
 {
-    "domain": "hitachi_yutaki",
+    "domain": "hitachi",
     "name": "Hitachi Yutaki Heat Pump",
     "codeowners": [
         "@alepee"
