--- a/custom_components/hitachi_yutaki/manifest.json
+++ b/custom_components/hitachi_yutaki/manifest.json
@@ -12,6 +12,8 @@
     "homekit": {},
     "iot_class": "local_polling",
     "issue_tracker": "https://github.com/alepee/hitachi_yutaki/issues",
-    "requirements": [],
+    "requirements": [
+        "pymodbus>=3.0.0"
+    ],
     "version": "1.0.0"
 }
