--- a/custom_components/hitachi_yutaki/manifest.json
+++ b/custom_components/hitachi_yutaki/manifest.json
@@ -13,7 +13,7 @@
     "iot_class": "local_polling",
     "issue_tracker": "https://github.com/alepee/hass-hitachi_yutaki/issues",
     "requirements": [
-        "pymodbus>=3.0.0"
+        "pymodbus==3.6.9"
     ],
     "version": "1.0.0"
 }
