--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,33 +1,53 @@
 {
-    "name": "Hitachi Yutaki Development",
+    "name": "hitachi-yutaki-dev",
     "image": "mcr.microsoft.com/devcontainers/python:3.12",
-    "postCreateCommand": "pip install -r requirements_dev.txt",
+    "postCreateCommand": "scripts/setup",
+    "appPort": [
+        "9125:8123"
+    ],
+    "portsAttributes": {
+        "8123": {
+            "label": "Home Assistant internal",
+            "onAutoForward": "notify"
+        },
+        "9125": {
+            "label": "Home Assistant remote",
+            "onAutoForward": "notify"
+        }
+    },
     "customizations": {
         "vscode": {
             "extensions": [
                 "ms-python.python",
-                "ms-python.vscode-pylance",
                 "github.vscode-pull-request-github",
                 "ryanluker.vscode-coverage-gutters",
-                "ms-python.black-formatter"
+                "ms-python.vscode-pylance",
+                "ms-python.pylint",
+                "charliermarsh.ruff"
             ],
             "settings": {
-                "python.testing.pytestEnabled": true,
-                "python.testing.unittestEnabled": false,
-                "python.testing.nosetestsEnabled": false,
+                "files.eol": "\n",
+                "editor.tabSize": 4,
+                "python.pythonPath": "/usr/bin/python3",
+                "python.analysis.autoSearchPaths": false,
+                "[python]": {
+                    "editor.defaultFormatter": "charliermarsh.ruff",
+                    "editor.formatOnSave": true
+                },
+                "editor.formatOnPaste": false,
                 "editor.formatOnSave": true,
-                "python.formatting.provider": "black",
-                "editor.codeActionsOnSave": {
-                    "source.organizeImports": true
-                }
+                "editor.formatOnType": true,
+                "files.trimTrailingWhitespace": true,
+                "[markdown]": {
+                    "files.trimTrailingWhitespace": false
+                },
+                "terminal.integrated.defaultProfile.linux": "zsh"
             }
         }
     },
+    "remoteUser": "vscode",
     "features": {
-        "ghcr.io/devcontainers/features/github-cli:1": {}
-    },
-    "mounts": [
-        "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
-    ],
-    "remoteUser": "vscode"
-} 
+        "ghcr.io/devcontainers/features/rust:1": {},
+        "ghcr.io/devcontainers-contrib/features/ffmpeg-apt-get:1": {}
+    }
+}
