--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,125 @@
-# Python cache
+# Home Assistant config
+config/
+
+#Links for local development
+/translations
+/__init__.py
+/binary_sensor.py
+/climate.py
+/config_flow.py
+/const.py
+/coordinator.py
+/manifest.json
+/number.py
+/select.py
+/sensor.py
+/switch.py
+
+todo
+
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
 
+# C extensions
+*.so
+*.DS_Store
 # Distribution / packaging
-dist/
+.Python
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Virtual environment
-venv/
-.env/
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-# IDE settings
-.vscode/
-.idea/
-
-# Home Assistant local development files
-config/
-.storage/
-.cloud/
-.HA_VERSION
-core/
-
-# Logs
-home-assistant.log*
-
-# Custom component development
-custom_components/hitachi_yutaki/*.pyc
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 htmlcov/
 .tox/
-.nox/
 .coverage
 .coverage.*
+.cache
+nosetests.xml
 coverage.xml
 *.cover
+.hypothesis/
 .pytest_cache/
 
-# Devcontainer configuration
-.devcontainer/.env
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+
+.idea/
