--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,49 +1,27 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
-    hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-      - id: check-yaml
-      - id: check-added-large-files
-      - id: check-json
-      - id: check-merge-conflict
-      - id: debug-statements
-      - id: detect-private-key
-
-  - repo: https://github.com/psf/black
-    rev: 23.11.0
-    hooks:
-      - id: black
-        args:
-          - --safe
-          - --quiet
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: 6.1.0
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-docstrings==1.7.0
-          - pydocstyle==6.3.0
-
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.5
-    hooks:
-      - id: bandit
-        args:
-          - --quiet
-          - --format=custom
-          - --configfile=tests/bandit.yaml
-
-  - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.7.0
-    hooks:
-      - id: mypy
-        additional_dependencies:
-          - types-all
+    - repo: https://github.com/astral-sh/ruff-pre-commit
+      rev: v0.7.0
+      hooks:
+          - id: ruff
+            args:
+                - --fix
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v5.0.0
+      hooks:
+          - id: trailing-whitespace
+          - id: end-of-file-fixer
+          - id: check-json
+            exclude: (.vscode|.devcontainer)
+          - id: pretty-format-json
+            args: ['--autofix', '--no-ensure-ascii', '--top-keys=domain,name']
+            files: manifest.json
+          - id: pretty-format-json
+            args: ['--autofix', '--no-ensure-ascii', '--top-keys=name']
+            files: hacs.json
+          - id: pretty-format-json
+            args: ['--autofix', '--no-ensure-ascii', '--no-sort-keys']
+            files: (/strings\.json$|translations/.+\.json$)
+          - id: check-yaml
+            args: ['--unsafe']
+          - id: check-added-large-files
+          - id: check-shebang-scripts-are-executable
