--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+colorlog==6.9.0
 homeassistant
-pymodbus>=3.0.0
-pytest
-pytest-homeassistant-custom-component
+pip>=21.0,<24.1
+ruff==0.7.0
+pre-commit==4.0.1
+bump2version==1.0.1
+
+pymodbus==3.6.9
