--- a/setup.cfg
+++ b/setup.cfg
@@ -1,53 +1,18 @@
-[coverage:run]
-source = custom_components/hitachi_yutaki
-
-[coverage:report]
-exclude_lines =
-    pragma: no cover
-    raise NotImplemented()
-    if __name__ == '__main__':
-    main()
-show_missing = true
+[bumpversion]
+current_version = 0.9.65
 
 [flake8]
 exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
+doctests = True
 max-line-length = 88
-# Following URLs should help explain these ignored errors:
-# E501: https://www.flake8rules.com/rules/E501.html (line too long)
-# W503: https://www.flake8rules.com/rules/W503.html (line break before binary operator)
 ignore =
-    E501,
-    W503
+	E501,
+	W503,
+	E203,
+	D202,
+	W504
+noqa-require-code = True
 
 [isort]
-# https://github.com/timothycrosley/isort
-# https://github.com/timothycrosley/isort/wiki/isort-Settings
 profile = black
-# will group `import x` and `from x import` of the same module.
 force_sort_within_sections = true
-known_first_party = custom_components.hitachi_yutaki,tests
-combine_as_imports = true
-
-[tool:pytest]
-testpaths = tests
-norecursedirs = .git
-addopts =
-    --strict-markers
-    --cov=custom_components/hitachi_yutaki
-asyncio_mode = auto
-
-[mypy]
-python_version = 3.11
-show_error_codes = true
-follow_imports = silent
-ignore_missing_imports = true
-warn_incomplete_stub = true
-warn_redundant_casts = true
-warn_unused_configs = true
-check_untyped_defs = true
-disallow_incomplete_defs = true
-disallow_untyped_calls = true
-disallow_untyped_defs = true
-no_implicit_optional = true
-warn_return_any = true
-warn_unreachable = true
