fix: Remove dependency to modbus integration

--- a/custom_components/hitachi_yutaki/manifest.json
+++ b/custom_components/hitachi_yutaki/manifest.json
@@ -5,9 +5,7 @@
     "@alepee"
   ],
   "config_flow": true,
-  "dependencies": [
-    "modbus"
-  ],
+  "dependencies": [],
   "documentation": "https://github.com/alepee/hass-hitachi_yutaki",
   "homekit": {},
   "iot_class": "local_polling",
