--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -19,6 +19,7 @@
         "vscode": {
             "extensions": [
                 "ms-python.python",
+                "ms-vscode.makefile-tools",
                 "github.vscode-pull-request-github",
                 "ryanluker.vscode-coverage-gutters",
                 "ms-python.vscode-pylance",
