feat: Update devcontainer configuration and refactor Hitachi Yutaki component
- Added JSON editor settings for tab size in devcontainer configuration.
- Introduced Git feature in devcontainer with latest version and custom mounts for GnuPG and SSH.
- Removed unused history fetching function from Hitachi Yutaki sensor.
- Updated English and French translations for compressor status messages.

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -35,6 +35,9 @@
                     "editor.defaultFormatter": "charliermarsh.ruff",
                     "editor.formatOnSave": true
                 },
+                "[json]": {
+                    "editor.tabSize": 2
+                },
                 "editor.formatOnPaste": false,
                 "editor.formatOnSave": true,
                 "editor.formatOnType": true,
