--- a/custom_components/hitachi_yutaki/manifest.json
+++ b/custom_components/hitachi_yutaki/manifest.json
@@ -11,7 +11,7 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/alepee/hass-hitachi_yutaki/issues",
   "requirements": [
-    "pymodbus==3.6.9"
+    "pymodbus>=3.6.9,<4.0.0"
   ],
-  "version": "1.5.0-b6"
+  "version": "1.5.0-b7"
 }
