--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 1.5.0-b8
+current_version = 1.5.0
 
 [flake8]
 exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
