--- a/custom_components/hitachi_yutaki/manifest.json
+++ b/custom_components/hitachi_yutaki/manifest.json
@@ -10,8 +10,18 @@
   "homekit": {},
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/alepee/hass-hitachi_yutaki/issues",
+  "platforms": [
+    "switch",
+    "sensor",
+    "number",
+    "select",
+    "climate",
+    "binary_sensor",
+    "water_heater",
+    "button"
+  ],
   "requirements": [
     "pymodbus>=3.6.9,<4.0.0"
   ],
-  "version": "1.8.0"
+  "version": "1.8.1"
 }
