feat: Implement hexagonal architecture and enhance heat pump integration
- Added a new hexagonal architecture to decouple core logic from communication protocols, facilitating modular integration.
- Introduced smart profile auto-detection for heat pump models, enhancing model identification without altering core configurations.
- Major refactoring to align with the new architecture, including reorganized Modbus register maps and improved entity naming for clarity.
- Removed redundant temperature entities, now managed by the climate entity.
- Fixed multiple issues, including circular imports and entity creation bugs.
- Updated documentation and translations to reflect changes.

--- a/custom_components/hitachi_yutaki/manifest.json
+++ b/custom_components/hitachi_yutaki/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "hitachi_yutaki",
-  "name": "Hitachi Yutaki Heat Pump",
+  "name": "Hitachi Heat Pump",
   "codeowners": [
     "@alepee"
   ],
@@ -13,5 +13,5 @@
   "requirements": [
     "pymodbus>=3.6.9,<4.0.0"
   ],
-  "version": "1.9.3"
+  "version": "2.0.0-beta.3"
 }
