--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 1.9.3
+current_version = 2.0.0-beta.3
 
 [flake8]
 exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
