--- a/custom_components/hitachi_yutaki/manifest.json
+++ b/custom_components/hitachi_yutaki/manifest.json
@@ -5,7 +5,7 @@
     "@alepee"
   ],
   "config_flow": true,
-  "dependencies": [],
+  "dependencies": ["recorder"],
   "documentation": "https://github.com/alepee/hass-hitachi_yutaki",
   "homekit": {},
   "iot_class": "local_polling",
