fix: update profile selection logic in config flow
Refactor profile selection to use the first detected profile if available, otherwise default to UNDEFINED. This change improves user experience by allowing manual selection of profiles when necessary.

--- a/custom_components/hitachi_yutaki/manifest.json
+++ b/custom_components/hitachi_yutaki/manifest.json
@@ -5,7 +5,9 @@
     "@alepee"
   ],
   "config_flow": true,
-  "dependencies": ["recorder"],
+  "dependencies": [
+    "recorder"
+  ],
   "documentation": "https://github.com/alepee/hass-hitachi_yutaki",
   "homekit": {},
   "iot_class": "local_polling",
