chore: migrate tooling to uv, consolidate config into pyproject.toml
- Replace pip/requirements*.txt with uv and pyproject.toml
- Move ruff config from .ruff.toml into pyproject.toml
- Move pytest config from pytest.ini into pyproject.toml
- Update CI workflows (lint, tests, validate) to use uv
- Update all dev scripts to use uv
- Add uv feature to devcontainer
- Raise pre-commit large file limit for uv.lock
- Fix trailing whitespace in docs and source files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,4 +24,5 @@ repos:
           - id: check-yaml
             args: ['--unsafe']
           - id: check-added-large-files
+            args: ['--maxkb=1500']
           - id: check-shebang-scripts-are-executable
