docs: add HC-A16MB gateway documentation PDF

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,4 +25,5 @@ repos:
             args: ['--unsafe']
           - id: check-added-large-files
             args: ['--maxkb=1500']
+            exclude: '\.pdf$'
           - id: check-shebang-scripts-are-executable
