chore: release 2.0.0-rc.1
Bump version to 2.0.0-rc.1 and consolidate CHANGELOG with full
release notes covering architecture, multi-gateway support,
thermal accuracy improvements, and migration path from v1.9.x.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "hass-hitachi-yutaki"
-version = "2.0.0-beta.12"
+version = "2.0.0-rc.1"
 requires-python = ">=3.12"
 description = "Home Assistant custom integration for Hitachi Yutaki heat pumps"
 license = "MIT"
