ci: allow pre-release deps when pinning HA version
HA 2025.1.x depends on aiohasupervisor==0.2.2b5 (a pre-release),
which uv refuses to install by default.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,7 +51,7 @@ jobs:
         run: uv sync --group dev
 
       - name: Pin HA ${{ matrix.ha-version }}
-        run: uv pip install pytest-homeassistant-custom-component==${{ matrix.phac-version }}
+        run: uv pip install --prerelease=allow pytest-homeassistant-custom-component==${{ matrix.phac-version }}
 
       - name: Run tests with pytest
         run: uv run pytest
