--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "hass-hitachi-yutaki"
-version = "2.0.0-rc.2"
+version = "2.0.0"
 requires-python = ">=3.13"
 description = "Home Assistant custom integration for Hitachi Yutaki heat pumps"
 license = "MIT"
